# autoparallel

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  partitioned_shard_proposal.md  pyproject.toml  requirements-test.txt
.github/workflows/: lint.yml  test_cuda.yml  test_torchtitan.yml
autoparallel/: activation_checkpointing.py  api.py  apply_sharding.py  asynctp.py  asynctp_ops.py  auto_bucketing.py  cast_parametrization.py  collective_runtime_estimation.py  collectives.py  compute_estimation.py  debug_helpers.py  export_module.py  graph_clustering.py  graph_pp_runner.py  graph_utils.py  init_weights.py  local_map_hop.py  optimize_sharding.py  ordered_sharding.py  propagation_rules.py  utils.py
autoparallel/_passes/: graph_multiplex.py  graph_partition.py  split_di_dw_graph.py  split_fsdp_collectives.py
autoparallel/autobucketing_util/: bucket_func.py  bucket_plan.py  bucket_utils.py  estimation.py  estimation_utils.py  reorder.py
autoparallel/dtensor_util/: __init__.py  redistribute_tensor.py  utils.py
examples/: example_autoparallel.py  example_dcp.py  example_ds3_local_map.py  example_ds3_pp.py  example_llama3.py  example_local_map.py  example_pp.py  example_pp_graph_partition.py  example_pp_graph_passes.py
examples/native_ds3/: example_deepseek.py  moe_ops.py  moe_placements.py  (+4 more)
mast/: .torchxconfig  mast.py  mount.sh  run_torchtitan.sh  sweep.py
tests/: test_aot_eager.py  test_api.py  test_dtensor.py  test_export_module.py  test_graph_partition.py  test_optimize_placement.py  test_ordered_sharding.py  test_pp_passes.py
(+4 files in other folders)
