[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoparallel"
version = "0.0.1"
authors = [
  { name="Francisco Massa", email="fmassa@meta.com" },
]
description = "Automatic PyTorch model sharding"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.7.0",
    "typing_extensions>=4.0.0",
    "filecheck",
    "pulp"
]

[project.urls]
Homepage = "https://github.com/pytorch-labs/autoparallel"
Issues = "https://github.com/pytorch-labs/autoparallel/issues"

[tool.hatch.build.targets.wheel]
packages = ["autoparallel"]

[tool.hatch.build]
include = [
  "autoparallel/**/*.py",
  "autoparallel/**/*.pyi",
  "LICENSE",
]
exclude = [
  "tests/**/*",
  "examples/**/*",
]

[tool.hatch.metadata]
allow-direct-references = true
